--- a/profile.html
+++ b/profile.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="utf-8">
@@ -8,6 +9,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,800;1,400;1,800&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style/common.css">
 	<link rel="stylesheet" href="style/profile.css">
+	<script src="script/index.js" charset="utf-8"></script>
 	<title>Travelust</title>
 </head>
 <body>
@@ -372,23 +374,23 @@
 				<p id="interests-p">Interests:</p>
 				<div id="interests">
 					<div class="column">
-						<article class="interest" id="int-1">
+						<p class="interest" id="int-1">
 							<a href="#">Interest 1</a>
-						</article>
-						<article class="interest" id="int-2">
+						</p>
+						<p class="interest" id="int-2">
 							<a href="#">Interest 2</a>
-						</article>
-						<article class="interest" id="int-3">
+						</p>
+						<p class="interest" id="int-3">
 							<a href="#">Interest 3</a>
-						</article>
+						</p>
 					</div>
 					<div class="column">
-						<article class="interest" id="int-4">
+						<p class="interest" id="int-4">
 							<a href="#">Interest 4</a>
-						</article>
-						<article class="interest" id="int-5">
+						</p>
+						<p class="interest" id="int-5">
 							<a href="#">Interest 5</a>
-						</article>
+						</p>
 					</div>
 				</div>
 			</div>
@@ -420,4 +422,3 @@
   <!-- END FOOTER -->
 </body>
 </html>
-<script src="script/index.js" charset="utf-8"></script>
