--- a/last_experiences.html
+++ b/last_experiences.html
@@ -307,7 +307,7 @@
 						<div class="comments-and-likes">
 							<img src="images/like.png" alt="like heart">
 							<p>14</p>
-							<img src="images/coment.png" alt="comment icon">
+							<img src="images/speech-bubble.png" alt="comment icon">
 							<p>2</p>
 						</div>
 					</div>
@@ -321,7 +321,7 @@
 						<div class="comments-and-likes">
 							<img src="images/like.png" alt="like heart">
 							<p>10</p>
-							<img src="images/coment.png" alt="comment icon">
+							<img src="images/speech-bubble.png" alt="comment icon">
 							<p>2</p>
 						</div>
 					</div>
@@ -337,7 +337,7 @@
 						<div class="comments-and-likes">
 							<img src="images/like.png" alt="like heart">
 							<p>25</p>
-							<img src="images/coment.png" alt="comment icon">
+							<img src="images/speech-bubble.png" alt="comment icon">
 							<p>1</p>
 						</div>
 					</div>
