--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				<div class="col-s-9 col-t-9 col-9">
 					<label for="interest-1" class="label-int">Interest 1</label>
 					<select name="inter1" id="interest-1" class="col-s-12">
-						<option selected disabled hidden></option>
+						<option selected disabled hidden>...</option>
 						<option value="beach">Beach</option>
 						<option value="exotic">Exotic</option>
 						<option value="city">City</option>
@@ -121,7 +121,7 @@
 				<div class="col-s-9 col-t-9 col-9">
 					<label for="interest-2" class="label-int">Interest 2</label>
 					<select name="inter2" id="interest-2" class="col-s-12">
-						<option selected disabled hidden></option>
+						<option selected disabled hidden>...</option>
 						<option value="beach">Beach</option>
 						<option value="exotic">Exotic</option>
 						<option value="city">City</option>
@@ -138,7 +138,7 @@
 				<div class="col-s-9 col-t-9 col-9">
 					<label for="interest-3" class="label-int">Interest 3</label>
 					<select name="inter3" id="interest-3" class="col-s-12">
-						<option selected disabled hidden></option>
+						<option selected disabled hidden>...</option>
 						<option value="beach">Beach</option>
 						<option value="exotic">Exotic</option>
 						<option value="city">City</option>
@@ -155,7 +155,7 @@
 				<div class="col-s-9 col-t-9 col-9">
 					<label for="interest-4" class="label-int">Interest 4</label>
 					<select name="inter4" id="interest-4" class="col-s-12">
-						<option selected disabled hidden></option>
+						<option selected disabled hidden>...</option>
 						<option value="beach">Beach</option>
 						<option value="exotic">Exotic</option>
 						<option value="city">City</option>
@@ -172,7 +172,7 @@
 				<div class="col-s-9 col-t-9 col-9">
 					<label for="interest-5" class="label-int">Interest 5</label>
 					<select name="inter5" id="interest-5" class="col-s-12">
-						<option selected disabled hidden></option>
+						<option selected disabled hidden>...</option>
 						<option value="beach">Beach</option>
 						<option value="exotic">Exotic</option>
 						<option value="city">City</option>
@@ -282,7 +282,6 @@
 <section>
 	<h1>Welcome to our website</h1>
 	<div class="col-12 col-s-12 col-t-12" id="map-div">
-		<?xml version="1.0"?>
 		<svg baseprofile="tiny" fill="#ececec" height="100%" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width=".2" viewbox="0 0 2200 857" width="100%" xmlns="http://www.w3.org/2000/svg" id="map-svg">
 			<path d="M1383 261.6l1.5 1.8-2.9 0.8-2.4 1.1-5.9 0.8-5.3 1.3-2.4 2.8 1.9 2.7 1.4 3.2-2 2.7 0.8 2.5-0.9 2.3-5.2-0.2 3.1 4.2-3.1 1.7-1.4 3.8 1.1 3.9-1.8 1.8-2.1-0.6-4 0.9-0.2 1.7-4.1 0-2.3 3.7 0.8 5.4-6.6 2.7-3.9-0.6-0.9 1.4-3.4-0.8-5.3 1-9.6-3.3 3.9-5.8-1.1-4.1-4.3-1.1-1.2-4.1-2.7-5.1 1.6-3.5-2.5-1 0.5-4.7 0.6-8 5.9 2.5 3.9-0.9 0.4-2.9 4-0.9 2.6-2-0.2-5.1 4.2-1.3 0.3-2.2 2.9 1.7 1.6 0.2 3 0 4.3 1.4 1.8 0.7 3.4-2 2.1 1.2 0.9-2.9 3.2 0.1 0.6-0.9-0.2-2.6 1.7-2.2 3.3 1.4-0.1 2 1.7 0.3 0.9 5.4 2.7 2.1 1.5-1.4 2.2-0.6 2.5-2.9 3.8 0.5 5.4 0z" id="AF">
 			</path>
@@ -1160,12 +1159,6 @@
 			</path>
 			<path class="Guadeloupe" d="M 642.6 396.9 643 397 643.5 397.4 642.2 397.7 641.9 397.8 641.5 397.5 641.6 396.9 641.8 396.8 641.7 396.2 641.8 396 642.1 395.8 642.4 396.2 642.4 396.6 642.6 396.9 Z">
 			</path>
-			<circle cx="997.9" cy="189.1" id="0">
-			</circle>
-			<circle cx="673.5" cy="724.1" id="1">
-			</circle>
-			<circle cx="1798.2" cy="719.3" id="2">
-			</circle>
 		</svg>
 	</div>
 </section>
