--- a/last_experiences.html
+++ b/last_experiences.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	<script src="script/index.js"></script>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,800;1,400;1,800&display=swap" rel="stylesheet">
@@ -100,91 +101,91 @@
 					<input type="file" id="hidden" class="input-sign" name="change picture">
 					<label for="hidden" id="input-label">Select picture</label>
 					<h4>Interests</h4>
-						<div class="col-s-9 col-t-9 col-9">
-							<label for="interest-1" class="label-int">Interest 1</label>
-							<select name="inter1" id="interest-1" class="col-s-12">
-								<option selected disabled hidden></option>
-								<option value="beach">Beach</option>
-								<option value="exotic">Exotic</option>
-								<option value="city">City</option>
-								<option value="europe">Europe</option>
-								<option value="africa">Africa</option>
-								<option value="america">America</option>
-								<option value="asia">Asia</option>
-								<option value="forest">Forest</option>
-								<option value="islands">Islands</option>
-								<option value="budhist">Budhist</option>
-								<option value="religious">Religious</option>
-							</select>
-						</div>
-						<div class="col-s-9 col-t-9 col-9">
-							<label for="interest-2" class="label-int">Interest 2</label>
-							<select name="inter2" id="interest-2" class="col-s-12">
-								<option selected disabled hidden></option>
-								<option value="beach">Beach</option>
-								<option value="exotic">Exotic</option>
-								<option value="city">City</option>
-								<option value="europe">Europe</option>
-								<option value="africa">Africa</option>
-								<option value="america">America</option>
-								<option value="asia">Asia</option>
-								<option value="forest">Forest</option>
-								<option value="islands">Islands</option>
-								<option value="budhist">Budhist</option>
-								<option value="religious">Religious</option>
-							</select>
-						</div>
-						<div class="col-s-9 col-t-9 col-9">
-							<label for="interest-3" class="label-int">Interest 3</label>
-							<select name="inter3" id="interest-3" class="col-s-12">
-								<option selected disabled hidden></option>
-								<option value="beach">Beach</option>
-								<option value="exotic">Exotic</option>
-								<option value="city">City</option>
-								<option value="europe">Europe</option>
-								<option value="africa">Africa</option>
-								<option value="america">America</option>
-								<option value="asia">Asia</option>
-								<option value="forest">Forest</option>
-								<option value="islands">Islands</option>
-								<option value="budhist">Budhist</option>
-								<option value="religious">Religious</option>
-							</select>
-						</div>
-						<div class="col-s-9 col-t-9 col-9">
-							<label for="interest-4" class="label-int">Interest 4</label>
-							<select name="inter4" id="interest-4" class="col-s-12">
-								<option selected disabled hidden></option>
-								<option value="beach">Beach</option>
-								<option value="exotic">Exotic</option>
-								<option value="city">City</option>
-								<option value="europe">Europe</option>
-								<option value="africa">Africa</option>
-								<option value="america">America</option>
-								<option value="asia">Asia</option>
-								<option value="forest">Forest</option>
-								<option value="islands">Islands</option>
-								<option value="budhist">Budhist</option>
-								<option value="religious">Religious</option>
-							</select>
-						</div>
-						<div class="col-s-9 col-t-9 col-9">
-							<label for="interest-5" class="label-int">Interest 5</label>
-							<select name="inter5" id="interest-5" class="col-s-12">
-								<option selected disabled hidden></option>
-								<option value="beach">Beach</option>
-								<option value="exotic">Exotic</option>
-								<option value="city">City</option>
-								<option value="europe">Europe</option>
-								<option value="africa">Africa</option>
-								<option value="america">America</option>
-								<option value="asia">Asia</option>
-								<option value="forest">Forest</option>
-								<option value="islands">Islands</option>
-								<option value="budhist">Budhist</option>
-								<option value="religious">Religious</option>
-							</select>
-						</div>
+					<div class="col-s-9 col-t-9 col-9">
+						<label for="interest-1" class="label-int">Interest 1</label>
+						<select name="inter1" id="interest-1" class="col-s-12">
+							<option selected disabled hidden>...</option>
+							<option value="beach">Beach</option>
+							<option value="exotic">Exotic</option>
+							<option value="city">City</option>
+							<option value="europe">Europe</option>
+							<option value="africa">Africa</option>
+							<option value="america">America</option>
+							<option value="asia">Asia</option>
+							<option value="forest">Forest</option>
+							<option value="islands">Islands</option>
+							<option value="budhist">Budhist</option>
+							<option value="religious">Religious</option>
+						</select>
+					</div>
+					<div class="col-s-9 col-t-9 col-9">
+						<label for="interest-2" class="label-int">Interest 2</label>
+						<select name="inter2" id="interest-2" class="col-s-12">
+							<option selected disabled hidden>...</option>
+							<option value="beach">Beach</option>
+							<option value="exotic">Exotic</option>
+							<option value="city">City</option>
+							<option value="europe">Europe</option>
+							<option value="africa">Africa</option>
+							<option value="america">America</option>
+							<option value="asia">Asia</option>
+							<option value="forest">Forest</option>
+							<option value="islands">Islands</option>
+							<option value="budhist">Budhist</option>
+							<option value="religious">Religious</option>
+						</select>
+					</div>
+					<div class="col-s-9 col-t-9 col-9">
+						<label for="interest-3" class="label-int">Interest 3</label>
+						<select name="inter3" id="interest-3" class="col-s-12">
+							<option selected disabled hidden>...</option>
+							<option value="beach">Beach</option>
+							<option value="exotic">Exotic</option>
+							<option value="city">City</option>
+							<option value="europe">Europe</option>
+							<option value="africa">Africa</option>
+							<option value="america">America</option>
+							<option value="asia">Asia</option>
+							<option value="forest">Forest</option>
+							<option value="islands">Islands</option>
+							<option value="budhist">Budhist</option>
+							<option value="religious">Religious</option>
+						</select>
+					</div>
+					<div class="col-s-9 col-t-9 col-9">
+						<label for="interest-4" class="label-int">Interest 4</label>
+						<select name="inter4" id="interest-4" class="col-s-12">
+							<option selected disabled hidden>...</option>
+							<option value="beach">Beach</option>
+							<option value="exotic">Exotic</option>
+							<option value="city">City</option>
+							<option value="europe">Europe</option>
+							<option value="africa">Africa</option>
+							<option value="america">America</option>
+							<option value="asia">Asia</option>
+							<option value="forest">Forest</option>
+							<option value="islands">Islands</option>
+							<option value="budhist">Budhist</option>
+							<option value="religious">Religious</option>
+						</select>
+					</div>
+					<div class="col-s-9 col-t-9 col-9">
+						<label for="interest-5" class="label-int">Interest 5</label>
+						<select name="inter5" id="interest-5" class="col-s-12">
+							<option selected disabled hidden>...</option>
+							<option value="beach">Beach</option>
+							<option value="exotic">Exotic</option>
+							<option value="city">City</option>
+							<option value="europe">Europe</option>
+							<option value="africa">Africa</option>
+							<option value="america">America</option>
+							<option value="asia">Asia</option>
+							<option value="forest">Forest</option>
+							<option value="islands">Islands</option>
+							<option value="budhist">Budhist</option>
+							<option value="religious">Religious</option>
+						</select>
+					</div>
 				</div>
 			</form>
 			<button type="submit" id="submit-sign" class="submit-but col-s-3">Submit</button>
@@ -365,5 +366,4 @@
 	</footer>
 	<!-- END FOOTER -->
 </body>
-<script src="script/index.js"></script>
 </html>
